fixed header and footer and got rid of white space

--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -3,7 +3,13 @@ main {
     flex-wrap: wrap;
     margin-bottom: 40px;
     background-size: cover;
-    height: 640px;
     align-content: flex-start;
     position: relative;
+    padding: 18vw;
 }  
+
+.backgroundImg {
+    background-position: center;
+    background-size: 100%;
+    background-size: cover;
+}
